--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "electron": "^23.1.2"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "csv": "^6.2.8",
+    "csv-parser": "^3.0.0"
   }
 }
